<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_eq"
        android:icon="@drawable/eq_icon"
        android:title="@string/EQtab" />
    <item
        android:id="@+id/nav_fm_curve"
        android:icon="@drawable/fm_icon"
        android:title="@string/FMtab" />
    <item
        android:id="@+id/nav_delays"
        android:icon="@drawable/del_icon"
        android:title="@string/DLtab" />
    <item
        android:id="@+id/nav_other"
        android:icon="@drawable/oth_icon"
        android:title="@string/OTtab" />
    <item
        android:id="@+id/nav_gala"
        android:icon="@drawable/gala_icon"
        android:title="@string/GLtab" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_tune_settings"
        android:title="@string/settings_title" />
</menu>